<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lovera.diego.criptomessage.MainActivity">
    <item
        android:id="@+id/share_app"
        android:checkable="false"
        android:orderInCategory="1"
        android:title="@string/share_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/check_repo"
        android:checkable="false"
        android:orderInCategory="2"
        android:title="@string/to_repository"
        app:showAsAction="never" />

    <item
        android:id="@+id/personal_page"
        android:checkable="false"
        android:orderInCategory="3"
        android:title="@string/diego_lovera_page"
        app:showAsAction="never" />
</menu>
